<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_light_blue_500_24dp"
        android:title="@string/title_home" />

    <item
    android:id="@+id/navigation_find"
    android:icon="@drawable/ic_explore_blue_500_24dp"
    android:title="@string/title_find" />

    <item
        android:id="@+id/navigation_msg"
        android:icon="@drawable/ic_message_blue_500_24dp"
        android:title="@string/title_msg" />

    <item
        android:id="@+id/navigation_mine"
        android:icon="@drawable/ic_person_blue_500_24dp"
        android:title="@string/title_mine" />

</menu>
