<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/activity_page"
    tools:context=".activity.AddProfileActivity" >

    <ScrollView
        android:id="@+id/profile_scroll_view"
        style="@style/match_match"
        android:paddingTop="@dimen/action_bar_height">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout style="@style/ll_vertical_match_match">

                <ImageView
                    android:id="@+id/profile_my_head_image_view"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_margin="@dimen/item_distance"
                    android:gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_plus_one_green_24dp" />

                <View style="@style/divider_horizontal_1px" />
            </LinearLayout>

            <View
                style="@style/divider_line_horizontal_1px"
                android:layout_height="2dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_common_height"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="@dimen/edit_line_height"
                    android:layout_marginStart="40dp"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:text="@string/nickname_label" />

                <EditText
                    android:id="@+id/nickname_editor"
                    android:layout_width="150dp"
                    android:layout_height="@dimen/edit_line_height"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="40dp"
                    android:layout_marginStart="40dp"
                    android:hint="@string/nickname_hint"
                    android:inputType="text"
                    android:gravity="start|center_vertical"
                    android:background="@drawable/shape_text_view_border"/>

            </LinearLayout>

            <View
                style="@style/divider_line_horizontal_1px"
                android:layout_height="2dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_common_height"
                android:minHeight="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/profile_sex_lable"
                    android:layout_width="60dp"
                    android:layout_height="@dimen/edit_line_height"
                    android:layout_marginStart="40dp"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:text="@string/profile_sex_lable" />

                <RadioGroup
                    android:id="@+id/profile_sex_radiogroup"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/edit_line_height"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="40dp"
                    android:layout_marginStart="40dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/profile_male_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/edit_line_height"
                        android:text="@string/profile_male_txt" />

                    <RadioButton
                        android:id="@+id/profile_female_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/edit_line_height"
                        android:checked="true"
                        android:text="@string/profile_female_txt" />
                </RadioGroup>

            </LinearLayout>

            <View
                style="@style/divider_line_horizontal_1px"
                android:layout_height="2dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_common_height"
                android:layout_gravity="center"
                android:minHeight="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="@dimen/edit_line_height"
                    android:layout_marginStart="40dp"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:text="@string/star_label" />

                <Spinner
                    android:id="@+id/star_spinner"
                    android:layout_width="150dp"
                    android:layout_height="@dimen/edit_line_height"
                    android:layout_marginEnd="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>

            <View
                style="@style/divider_line_horizontal_1px"
                android:layout_height="2dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_common_height"
                android:minHeight="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/age_text_view"
                    android:layout_width="60dp"
                    android:layout_height="@dimen/edit_line_height"
                    android:layout_marginStart="40dp"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:text="@string/age_label" />

                <EditText
                    android:id="@+id/age_editor"
                    android:layout_width="150dp"
                    android:layout_height="@dimen/edit_line_height"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="40dp"
                    android:layout_marginStart="40dp"
                    android:hint="@string/age_hint"
                    android:inputType="number"
                    android:gravity="start|center_vertical"
                    android:background="@drawable/shape_text_view_border"/>
            </LinearLayout>

            <View
                style="@style/divider_line_horizontal_1px"
                android:layout_height="2dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_common_height"
                android:minHeight="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="@dimen/edit_line_height"
                    android:layout_marginStart="40dp"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:text="@string/label_mobile" />

                <TextView
                    android:id="@+id/phone_field"
                    android:layout_width="150dp"
                    android:layout_height="@dimen/edit_line_height"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="40dp"
                    android:layout_marginStart="40dp"
                    android:gravity="start|center_vertical" />
            </LinearLayout>

            <View
                style="@style/divider_line_horizontal_1px"
                android:layout_height="2dp" />

                <Button
                    android:id="@+id/profile_add_btn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_line_height"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/selector_button_rounded_corner_clickable"
                    android:gravity="center"
                    android:text="@string/submit_title" />
        </LinearLayout>
    </ScrollView>

    <razerdp.github.com.ui.widget.common.TitleBar
        android:id="@id/title_bar_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.pnikosis.materialishprogress.ProgressWheel
        android:id="@+id/progress_wheel_add_profile"
        android:layout_width="@dimen/progress_wheel_site"
        android:layout_height="@dimen/progress_wheel_site"
        android:layout_gravity="center"
        app:matProg_barColor="@color/color_accent"
        app:matProg_progressIndeterminate="true"
        app:matProg_barWidth="4dp"
        app:matProg_fillRadius="true" />
</FrameLayout>