<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/activity_page"
    tools:context=".activity.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/block_divider_color"
        android:orientation="vertical"
        android:paddingTop="@dimen/action_bar_height">

        <RelativeLayout
            style="@style/match_match"
            android:layout_weight="1">

            <ScrollView style="@style/match_match">

                <LinearLayout style="@style/ll_vertical_match_match">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        android:orientation="vertical">

                        <com.appjishu.starzone.ui.widget.imageview.RoundedConerImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="10dp"
                            android:src="@mipmap/ic_launcher"
                            app:radius="10dp" />

                        <TextView
                            android:id="@+id/app_info_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/app_name" />

                    </LinearLayout>

                    <View
                        style="@style/divider_block_horizontal_1px"
                        android:layout_height="6dp" />

                    <LinearLayout
                        android:id="@+id/about_app_linear_layout"
                        style="@style/content_item_white"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp">

                        <ImageView
                            style="@style/content_item_lf_tv"
                            android:src="@drawable/ic_info_green_24dp" />

                        <TextView
                            style="@style/content_item_lf_tv"
                            android:layout_weight="1"
                            android:text="@string/about_app_entry_title" />

                        <ImageView
                            style="@style/content_item_rt_img_custom"
                            android:padding="0dp" />
                    </LinearLayout>

                    <View
                        style="@style/divider_line_horizontal_1px"
                        android:layout_height="2dp" />

                    <LinearLayout
                        android:id="@+id/about_share_linear_layout"
                        style="@style/content_item_white"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp">

                        <ImageView
                            style="@style/content_item_lf_tv"
                            android:src="@drawable/ic_screen_share_24dp" />

                        <TextView
                            style="@style/content_item_lf_tv"
                            android:layout_weight="1"
                            android:text="@string/about_share_btn_text" />

                        <ImageView
                            style="@style/content_item_rt_img_custom"
                            android:padding="0dp" />
                    </LinearLayout>

                    <View
                        style="@style/divider_line_horizontal_1px"
                        android:layout_height="2dp" />

                    <LinearLayout
                        android:id="@+id/about_email_linear_layout"
                        style="@style/content_item_white"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp">

                        <TextView
                            style="@style/content_item_lf_tv"
                            android:text="@string/contact_email" />

                        <TextView
                            style="@style/content_item_rt_tv"
                            android:layout_weight="1"
                            android:textSize="@dimen/text_size_micro"
                            android:text="@string/email_value" />
                    </LinearLayout>

                    <View
                        style="@style/divider_line_horizontal_1px"
                        android:layout_height="2dp" />

                    <LinearLayout
                        android:id="@+id/feedback_wechat_linear_layout"
                        style="@style/content_item_white"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp">

                        <TextView
                            style="@style/content_item_lf_tv"
                            android:text="@string/contact_wechat" />

                        <TextView
                            style="@style/content_item_rt_tv"
                            android:layout_weight="1"
                            android:textSize="@dimen/text_size_micro"
                            android:text="@string/contact_wechat_value" />
                    </LinearLayout>

                    <View
                        style="@style/divider_block_horizontal_1px"
                        android:layout_height="12dp" />
                </LinearLayout>
            </ScrollView>
        </RelativeLayout>
    </LinearLayout>

    <razerdp.github.com.ui.widget.common.TitleBar
        android:id="@id/title_bar_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</FrameLayout>