<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <razerdp.github.com.ui.widget.common.TitleBar
            android:id="@id/title_bar_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/phone_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:orientation="vertical"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp">

                    <com.appjishu.starzone.ui.widget.imageview.RoundedConerImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:src="@mipmap/ic_launcher"
                        app:radius="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/slogan_text"
                        android:textColor="@color/color_accent" />
                </LinearLayout>

                <View
                    style="@style/divider_block_horizontal_1px"
                    android:layout_height="6dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:orientation="vertical"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp">

                    <AutoCompleteTextView
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@null"
                        android:hint="@string/prompt_phone"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:singleLine="true" />

                    <View
                        style="@style/divider_line_horizontal_1px"
                        android:layout_height="2dp" />

                    <EditText
                        android:id="@+id/captcha"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@null"
                        android:hint="@string/prompt_password"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />
                </LinearLayout>

                <Button
                    android:id="@+id/phone_sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/selector_button_rounded_corner_clickable"
                    android:text="@string/login_btn_text"
                    android:textColor="@android:color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp">

                    <Button
                        android:id="@+id/goto_register_button"
                        style="@style/BeautifulButtonTransparent"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/button_height"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/action_register" />

                    <Button
                        android:id="@+id/reset_password_button"
                        style="@style/BeautifulButtonTransparent"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/button_height"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/action_forget_password" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <com.pnikosis.materialishprogress.ProgressWheel
        android:id="@+id/progress_wheel_login"
        android:layout_width="@dimen/progress_wheel_site"
        android:layout_height="@dimen/progress_wheel_site"
        android:layout_gravity="center"
        app:matProg_barColor="@color/color_accent"
        app:matProg_barWidth="4dp"
        app:matProg_fillRadius="true"
        app:matProg_progressIndeterminate="true" />
</FrameLayout>
