<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/block_divider_color"
        android:orientation="vertical"
        android:paddingBottom="@dimen/bottom_navigation_height">

        <View
            style="@style/divider_block_horizontal_1px"
            android:layout_height="6dp" />

        <LinearLayout
            android:id="@+id/friends_circle_linear_layout"
            style="@style/content_item_white">

            <ImageView
                style="@style/content_item_lf_tv"
                android:src="@drawable/ic_camera_circle_green_24dp" />

            <TextView
                style="@style/content_item_lf_tv"
                android:layout_weight="1"
                android:text="@string/friends_circle_title" />

            <ImageView style="@style/content_item_rt_img_custom" />
        </LinearLayout>

        <View
            style="@style/divider_block_horizontal_1px"
            android:layout_height="6dp" />

        <LinearLayout
            android:id="@+id/test_linear_layout"
            style="@style/content_item_white">

            <TextView
                style="@style/content_item_lf_tv"
                android:layout_weight="1"
                android:text="@string/test_entry_text" />

            <ImageView style="@style/content_item_rt_img" />
        </LinearLayout>

        <View
            android:id="@+id/test_activity_divider"
            style="@style/divider_horizontal_1px" />

        <LinearLayout style="@style/content_item_white"
            android:layout_height="30dp">

            <ImageView
                style="@style/content_item_lf_tv"
                android:src="@drawable/ic_contact_phone_blue_24dp" />

            <TextView
                style="@style/content_item_lf_tv"
                android:layout_weight="1"
                android:text="@string/friend_title_str" />

        </LinearLayout>


        <View
            style="@style/divider_line_horizontal_1px"
            android:layout_height="2dp" />

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/friend_swipe_refresh_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/friend_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </android.support.v4.widget.SwipeRefreshLayout>

    </LinearLayout>
</RelativeLayout>
